// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`animateDelete 1`] = `
{
  "type": "SOMETHING",
  "value": <div
    id="box"
  />,
}
`;

exports[`animateDelete 2`] = `
{
  "key": 1,
  "type": "BOX",
  "value": <div
    className="box"
    style={
      {
        "height": 1000,
        "left": 1010,
        "top": 2020,
        "width": 100,
      }
    }
  />,
}
`;

exports[`animateDelete 3`] = `
{
  "key": 1,
  "type": "BOX",
  "value": <div
    className="box"
    style={
      {
        "height": 800,
        "left": 1012,
        "top": 2024,
        "width": 80,
      }
    }
  />,
}
`;

exports[`animateDelete 4`] = `
{
  "key": 1,
  "type": "BOX",
  "value": <div
    className="box"
    style={
      {
        "height": 600,
        "left": 1014,
        "top": 2028,
        "width": 60,
      }
    }
  />,
}
`;

exports[`animateDelete 5`] = `
{
  "key": 1,
  "type": "BOX",
  "value": <div
    className="box"
    style={
      {
        "height": 400,
        "left": 1016,
        "top": 2032,
        "width": 40,
      }
    }
  />,
}
`;

exports[`animateDelete 6`] = `
{
  "key": 1,
  "type": "BOX",
  "value": <div
    className="box"
    style={
      {
        "height": 200,
        "left": 1018,
        "top": 2036,
        "width": 20,
      }
    }
  />,
}
`;

exports[`animateDelete 7`] = `
{
  "key": 1,
  "type": "BOX",
  "value": <div
    className="box"
    style={
      {
        "height": 0,
        "left": 1020,
        "top": 2040,
        "width": 0,
      }
    }
  />,
}
`;

exports[`animateDelete 8`] = `
{
  "key": 1,
  "rect": {
    "height": 1000,
    "width": 100,
    "x": 10,
    "y": 20,
  },
  "type": "DELETE",
  "x": 20,
  "y": 40,
}
`;

exports[`collectBoxes 1`] = `
{
  "type": "ROOT",
  "value": <div
    id="root"
  />,
}
`;

exports[`collectBoxes 2`] = `
{
  "key": 2,
  "type": "BOX",
  "value": <div
    id="box-2"
  />,
}
`;

exports[`collectBoxes 3`] = `
{
  "key": 2,
  "type": "BOX",
  "value": <div
    id="box-2"
  />,
}
`;

exports[`collectBoxes 4`] = `
{
  "key": 1,
  "type": "BOX",
  "value": <div
    id="box-1"
  />,
}
`;

exports[`collectBoxes 5`] = `
{
  "key": 1,
  "type": "BOX",
  "value": <div
    id="box-1"
  />,
}
`;

exports[`collectBoxes 6`] = `
{
  "key": 3,
  "type": "BOX",
  "value": <div
    id="box-3"
  />,
}
`;

exports[`collectBoxes 7`] = `
{
  "key": 3,
  "type": "BOX",
  "value": <div
    id="box-3"
  />,
}
`;

exports[`collectBoxes 8`] = `
{
  "key": 2,
  "type": "DELETE",
  "value": <div
    id="box-1"
  />,
}
`;

exports[`collectBoxes 9`] = `
{
  "key": 2,
  "type": "DELETE",
  "value": <div
    id="box-1"
  />,
}
`;

exports[`insertBox 1`] = `
{
  "button": 0,
  "key": 10,
  "type": "START",
  "x": 100,
  "y": 200,
}
`;

exports[`insertBox 2`] = `
{
  "key": 10,
  "type": "BOX",
  "value": <div
    className="drawing"
    onContextMenu={
      {
        "key": 10,
        "type": "DELETE",
      }
    }
    style={
      {
        "height": 20,
        "left": 1100,
        "top": 2200,
        "width": 10,
      }
    }
  />,
}
`;

exports[`insertBox 3`] = `
{
  "key": 10,
  "start": {
    "x": 100,
    "y": 200,
  },
  "type": "MARK",
  "x": 110,
  "y": 220,
}
`;

exports[`insertBox 4`] = `
{
  "key": 10,
  "type": "BOX",
  "value": <div
    className="drawing"
    onContextMenu={
      {
        "key": 10,
        "type": "DELETE",
      }
    }
    style={
      {
        "height": 40,
        "left": 1100,
        "top": 2200,
        "width": 20,
      }
    }
  />,
}
`;

exports[`insertBox 5`] = `
{
  "key": 10,
  "start": {
    "x": 100,
    "y": 200,
  },
  "type": "MARK",
  "x": 120,
  "y": 240,
}
`;

exports[`insertBox 6`] = `
{
  "key": 10,
  "type": "BOX",
  "value": <div
    className="box"
    onContextMenu={
      {
        "key": 10,
        "type": "DELETE",
      }
    }
    style={
      {
        "height": 60,
        "left": 1100,
        "top": 2200,
        "width": 50,
      }
    }
  />,
}
`;

exports[`insertBox 7`] = `
{
  "key": 10,
  "start": {
    "x": 100,
    "y": 200,
  },
  "type": "DONE",
  "x": 150,
  "y": 260,
}
`;

exports[`rootContainer 1`] = `
{
  "type": "ROOT",
  "value": <div
    onMouseDown={
      {
        "key": 1,
        "type": "START",
      }
    }
  />,
}
`;

exports[`rootContainer 2`] = `
{
  "button": 0,
  "key": 10,
  "type": "START",
  "x": 100,
  "y": 200,
}
`;

exports[`rootContainer 3`] = `
{
  "type": "ROOT",
  "value": <div
    onMouseMove={
      {
        "key": 1,
        "start": {
          "button": 0,
          "key": 10,
          "type": "START",
          "x": 100,
          "y": 200,
        },
        "type": "MARK",
      }
    }
    onMouseUp={
      {
        "key": 1,
        "start": {
          "button": 0,
          "key": 10,
          "type": "START",
          "x": 100,
          "y": 200,
        },
        "type": "DONE",
      }
    }
  />,
}
`;

exports[`rootContainer 4`] = `
{
  "key": 10,
  "type": "MARK",
  "x": 110,
  "y": 220,
}
`;

exports[`rootContainer 5`] = `
{
  "key": 10,
  "type": "MARK",
  "x": 120,
  "y": 240,
}
`;

exports[`rootContainer 6`] = `
{
  "key": 10,
  "type": "DONE",
  "x": 150,
  "y": 260,
}
`;

exports[`rootContainer 7`] = `
{
  "type": "ROOT",
  "value": <div
    onMouseDown={
      {
        "key": 2,
        "type": "START",
      }
    }
  />,
}
`;

exports[`rootContainer 8`] = `
{
  "type": "STOP",
}
`;
